# studyplanner

./: API.md  ARCHITECTURE.md  README.md  SPEC.md
backend/: Cargo.toml
backend/migrations/: init.sql
backend/src/: lib.rs  main.rs
backend/src/api/: ai.rs  mod.rs  plans.rs  reminders.rs  tools.rs  users.rs
backend/src/db/: mod.rs  repository.rs  schema.rs
backend/src/models/: ai.rs  mod.rs  plan.rs  reminder.rs  tool.rs  user.rs
backend/src/services/: ai_service.rs  mod.rs  plan_service.rs  reminder_service.rs  tool_service.rs
backend/src/utils/: config.rs  errors.rs  mod.rs  response.rs
backend/templates/: calculator_template.tsx  custom_template.tsx  flashcard_template.tsx  timer_template.tsx
backend/tests/: api_tests.rs
frontend/: eslint.config.js  package-lock.json  package.json
frontend/electron/: electron-builder.json  main.ts  preload.ts
frontend/src/: App.tsx  AppProviders.tsx  index.css  main.tsx  theme.ts
frontend/src/components/AI/: AIAssistant.tsx  ChatInterface.tsx  Suggestions.tsx
frontend/src/components/Common/: Button.tsx  Card.tsx  Loading.tsx
frontend/src/components/Layout/: AppBar.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/Reminders/: ReminderBadge.tsx
frontend/src/hooks/: useAI.ts  useDynamicTool.ts  useStudyPlan.ts
frontend/src/pages/: DailyPlan.tsx  Dashboard.tsx  Settings.tsx  ToolsPage.tsx  WeeklyPlan.tsx
frontend/src/store/: store.ts
frontend/src/types/: ai.ts  api.ts  global.d.ts  plan.ts  reminder.ts  tool.ts  user.ts
frontend/src/utils/: taskMapper.ts  toolRenderer.ts  user.ts  validators.ts
(+20 files in other folders)
