[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1"
tokio = "1"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16"
